src/objects/DataIndexKey__c.object
<CustomObject>
    <description>Defines an index or key and which fields are included on a Data Object.</description>
    <fields>
        <fullName>Compound__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if multiple fields are part of this key or index.</description>
        <inlineHelpText>Are multiple fields part of this?</inlineHelpText>
        <label>Compound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if external key, used mostly by database.com.</description>
        <inlineHelpText>Is this an external key?</inlineHelpText>
        <label>External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <description>Comma separated list of field names that are part of this index or key.</description>
        <inlineHelpText>Comma separated list of field names that are part of this index or key.</inlineHelpText>
        <label>Fields</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <description>The Data Object this index or key belongs.</description>
        <inlineHelpText>The Data Object this index or key belongs.</inlineHelpText>
        <label>Parent Object</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Indexes or Keys</relationshipLabel>
        <relationshipName>IndexesOrKeys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this is a primary key such as Id on Database.com or Primary Key in a RDBMS.</description>
        <inlineHelpText>Is this a primary key?</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <label>Data Index or Key</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Indexes or Keys</pluralLabel>
    <recordTypes>
        <fullName>Index</fullName>
        <active>true</active>
        <label>Index</label>
    </recordTypes>
    <recordTypes>
        <fullName>Key</fullName>
        <active>true</active>
        <label>Key</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>